Added go scripts to fastalane * added commentIssue method * added getIssues method

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,7 @@ fastlane/test_output
 fastlane/.env.secret
 fastlane/buildlog
 fastlane/cache
+fastlane/go_scripts/.env.secret
 
 # Code Injection
 #
