--- a/fastlane/.env
+++ b/fastlane/.env
@@ -1,10 +1,10 @@
-APPCENTER_OWNER_NAME=''
+APPCENTER_OWNER_NAME='VTB-Digital-Frameworks-App'
 APPCENTER_APP_NAME='AdmiralUI-iOS'
 APPCENTER_APP_NAME_DEV='AdmiralUI-iOS-Dev'
 APPCENTER_OWNER_TYPE='organization'
 APPCENTER_DESTINATIONS_DEV='Internal Testers, Collaborators'
 APPCENTER_DESTINATIONS_PROD='External Testers'
-APPCENTER_BASE_URL=''
+APPCENTER_BASE_URL='https://install.appcenter.ms'
 
 EXAMPLE_PROJECT_PATH='ExampleiOS/ExampleiOS.xcodeproj'
 LIBRARY_PROJECT_PATH='AdmiralUI.xcodeproj'
