--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       - name: GET TOKEN
         run:  echo $APPCENTER_API_TOKEN
+      - name: Install GEM
+        run:  gem install bundler:2.2.27
       - name: Start SwiftUI tests
         run:  bundle exec fastlane run_tests_swiftui
 #       - name: Build
