--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,8 +1,10 @@
+name: Build Demo IOS
 on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    types: ['opened', 'synchronize', 'reopened', 'edited']
+    branches: ['main', 'develop', 'rc/**']
 
 jobs:
   build:
@@ -12,57 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: GET TOKEN
-        run:  echo $APPCENTER_API_TOKEN
       - name: Install GEM
         run:  gem install bundler:2.2.27
+      - name: Set path
+        run:  bundle config set path 'vendor'
       - name: Bundle install
         run:  bundle install
       - name: Start SwiftUI tests
         run:  bundle exec fastlane run_tests_swiftui
-#       - name: Build
-#         env:
-#           scheme: ${{ 'default' }}
-#           platform: ${{ 'iOS Simulator' }}
-#         run: |
-#           # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-#           device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}'`
-#           if [ $scheme = default ]; then scheme=$(cat default); fi
-#           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-#           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-#           xcodebuild build-for-testing -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
-#       - name: Test
-#         env:
-#           scheme: ${{ 'default' }}
-#           platform: ${{ 'iOS Simulator' }}
-#         run: |
-#           # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-#           device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}'`
-#           if [ $scheme = default ]; then scheme=$(cat default); fi
-#           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-#           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-#           xcodebuild test-without-building -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
-#       - name: Start SwiftUI tests
-#         run: bundle exec fastlane run_tests_swiftui
-#       - name: Build
-#         env:
-#           scheme: ${{ 'default' }}
-#           platform: ${{ 'iOS Simulator' }}
-#         run: |
-#           # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-#           device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}'`
-#           if [ $scheme = default ]; then scheme=$(cat default); fi
-#           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-#           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-#           xcodebuild build-for-testing -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
-#       - name: Test
-#         env:
-#           scheme: ${{ 'default' }}
-#           platform: ${{ 'iOS Simulator' }}
-#         run: |
-#           # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-#           device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}'`
-#           if [ $scheme = default ]; then scheme=$(cat default); fi
-#           if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-#           file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-#           xcodebuild test-without-building -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
