--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: PWD
-        run:  pwd
       - name: Install GEM
         run:  gem install bundler:2.2.27
       - name: Set path
@@ -23,4 +21,4 @@ jobs:
       - name: Bundle install
         run:  bundle install
       - name: Start SwiftUI tests
-        run:  bundle exec fastlane run_tests_swiftui
+        run:  bundle exec fastlane run_all_tests
