--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup BASH
+        run: |
+             export LANG=en_US.UTF-8
+             export LANGUAGE=en_US.UTF-8
+             export LC_ALL=en_US.UTF-8
       - name: Install GEM
         run:  gem install bundler:2.2.27
       - name: Set path
