--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: PWD
+        run: pwd
       - name: Setup BASH
         run: |
              export LANG=en_US.UTF-8
