--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Test command
+        run: pwd
       - name: Setup Environment
         run:  |
               gem install bundler:2.2.27
