--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -18,6 +18,7 @@ jobs:
         run:  |
               bundle config set path 'vendor'
               bundle install
+              gem install fastlane
       - name: Start SwiftUI&UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Export UTF-8
@@ -25,6 +26,5 @@ jobs:
               export LANG=en_US.UTF-8
               export LANGUAGE=en_US.UTF-8
               export LC_ALL=en_US.UTF-8
-              bundle
       - name: Deploy AppCenter Dev
         run:  bundle exec fastlane deploy_appcenter_dev
