--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -22,4 +22,7 @@ jobs:
       - name: Start SwiftUI&UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
-        run:  bundle exec fastlane deploy_appcenter_dev keychain_url:"$KEYCHAIN_URL" ci_password:"$CI_PASSWORD"
+        run: |
+             echo $KEYCHAIN_URL
+             echo $CI_PASSWORD
+             bundle exec fastlane deploy_appcenter_dev keychain_url:"$KEYCHAIN_URL" ci_password:"$CI_PASSWORD"
