Update Fastfile & ios.yml

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,14 +15,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Environment
-        env:     
-          KEYCHAIN_URL: ${{ secrets.KEYCHAIN_URL }}
-          CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
         run:  bundle update
       - name: Start SwiftUI & UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
-        run: |
-             echo $KEYCHAIN_URL
-             echo $CI_PASSWORD
-             bundle exec fastlane deploy_appcenter_dev keychain_url:"$KEYCHAIN_URL" ci_password:"$CI_PASSWORD"
+        env:     
+          KEYCHAIN_URL: ${{ secrets.KEYCHAIN_URL }}
+          CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
+        run: bundle exec fastlane deploy_appcenter_dev keychain_url:"$KEYCHAIN_URL" ci_password:"$CI_PASSWORD"
