--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -22,4 +22,6 @@ jobs:
         env:     
           KEYCHAIN_URL: ${{ secrets.KEYCHAIN_URL }}
           CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
-        run: bundle exec fastlane deploy_appcenter_dev keychain_url:"$KEYCHAIN_URL" ci_password:"$CI_PASSWORD"
+        run: |
+          bundle exec fastlane unlock_keychain keychain_url:"$KEYCHAIN_URL" ci_password:"$CI_PASSWORD"
+          bundle exec fastlane deploy_appcenter_dev issue_name:${GITHUB_REF##*/}
