--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -4,7 +4,7 @@ on:
     branches: [ main ]
   pull_request:
     types: ['opened', 'synchronize', 'reopened', 'edited']
-    branches: ['main', 'develop', 'feature/**' 'rc/**']
+    branches: ['main', 'develop', 'feature/**', 'rc/**']
   workflow_dispatch:
 
 jobs:
