--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -6,6 +6,7 @@ on:
     types: ['opened', 'synchronize', 'reopened', 'edited']
     branches: ['main', 'develop', 'feature/**', 'rc/**']
   workflow_dispatch:
+    inputs:
 
 jobs:
   build:
