--- a/fastlane/.env
+++ b/fastlane/.env
@@ -1,6 +1,7 @@
 APPCENTER_APP_NAME='AdmiralUI-iOS'
 APPCENTER_APP_NAME_DEV='AdmiralUI-iOS-Dev'
 APPCENTER_OWNER_TYPE='organization'
+APPCENTER_OWNER_NAME='Admiral-Digital-Frameworks-App'
 APPCENTER_DESTINATIONS_DEV='Internal Testers, Collaborators'
 APPCENTER_DESTINATIONS_PROD='External Testers'
 APPCENTER_BASE_URL='https://install.appcenter.ms'
@@ -9,13 +10,6 @@ EXAMPLE_PROJECT_PATH='ExampleiOS/ExampleiOS.xcodeproj'
 LIBRARY_PROJECT_PATH='AdmiralUI.xcodeproj'
 PROJECT_WORKSPACE_PATH='AdmiralUI.xcworkspace'
 VERSION_FILE='../version.json'
-
-TEAMCITY_URL=''
-TEAMCITY_BUILD_ID_PROD='EBVK_Mobile_iOS_BuildProd'
-
-NEXUS_URL=''
-NEXUS_REPOSITORY_NAME='pfom-maven-lib'
-NEXUS_GROUP_ID='admiralui-ios'
 
 FIGMA_FONTS_FILE_KEY=''
 FIGMA_COLORS_FILE_KEY=''
