--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -24,5 +24,5 @@ jobs:
         env:     
           CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
         run: |
-          bundle exec fastlane run unlock_secrets_keychain password:"$CI_PASSWORD"
+          bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
           bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }}
