--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,7 +19,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Environment
-        run: bundle install
+        run:  bundle install
+      - name: Start SwiftUI & UIKit tests
+        run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
         env:     
           CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
