--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -20,13 +20,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Environment
         run:  bundle install
-      - name: Test Environment Variables
-        run: |
-          echo "EVENT_NUMBER: $EVENT_NUMBER"
-          echo "PR_ISSUE_NUMBER: $PR_ISSUE_NUMBER"
-        env:
-          EVENT_NUMBER: ${{ github.event.number }} 
-          PR_ISSUE_NUMBER: ${{ github.event.issue.number }}
       - name: Start SwiftUI & UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
@@ -34,4 +27,4 @@ jobs:
           CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
         run: |
           bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
-          bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }}
+          bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }} pull_request_number:${{ github.event.number }} 
