--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          message: 'resolve #${{ github.head_ref }}'
+          message: 'resolve #46'
       - name: Start SwiftUI & UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
