--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Commit changes
         run:  |
           git commit --amend -m "New Commit Message."
-          git push --force origin feature/46-auto-close-issue-and-pr
+          git push --force
       - name: Start SwiftUI & UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
