--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,9 +21,7 @@ jobs:
       - name: Setup Environment
         run:  bundle install
       - name: Commit changes
-        run:  |
-          git commit --amend -m "New Commit Message."
-          git push --force
+        run:  git commit --amend -m "New commit message."
       - name: Start SwiftUI & UIKit tests
         run:  bundle exec fastlane run_all_tests
       - name: Deploy AppCenter Dev
