--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -20,8 +20,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Commit Changes
         run:  |
-          git commit --amend -m "New commit message."
-          git push --force
+          git commit -m "Resolve Issue"
       - name: Setup Environment
         run:  bundle install
       - name: Start SwiftUI & UIKit tests
