--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,8 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Commit Changes
-        run:  |
-          git commit -m "Resolve Issue"
+        run: git commit --only --allow-empty -m "Resolve message"
       - name: Setup Environment
         run:  bundle install
       - name: Start SwiftUI & UIKit tests
