--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,7 +17,7 @@ jobs:
       FIGMA_ACCESS_TOKEN: ${{ secrets.FIGMA_ACCESS_TOKEN }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2e
+        uses: actions/checkout@v2
       - name: Link PR and Issue
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
