--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    types: ['opened', 'synchronize', 'reopened', 'edited']
+    types: ['opened', 'synchronize', 'reopened']
     branches: ['main', 'develop', 'feature/**', 'rc/**']
   workflow_dispatch:
 
@@ -18,11 +18,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Link PR and Issue
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Automated Resolve Message
-          commit_options: '--allow-empty'
       - name: Setup Environment
         run:  bundle install
       - name: Start SwiftUI & UIKit tests
