--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    types: ['opened', 'synchronize', 'reopened', 'edited']
+    types: ['opened', 'synchronize', 'reopened']
     branches: ['main', 'develop', 'feature/**', 'rc/**']
   workflow_dispatch:
 
