Added Uploading XCFrameWorks

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -28,3 +28,23 @@ jobs:
         run: |
           bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
           bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }} pull_request_number:${{ github.event.number }} 
+      - name: Build XCFrameworks
+        run:  bundle exec fastlane build_git_packages
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        env:
+          ADMIRAL_SWIFTUI: Products/xcframeworks/AdmiralSwiftUI.xcframework
+          ADMIRAL_UIKIT: Products/xcframeworks/AdmiralUIKit.xcframework
+          ADMIRAL_THEMES: Products/xcframeworks/AdmiralTheme.xcframework
+          ADMIRAL_UIRESOURCES: Products/xcframeworks/AdmiralUIResources.xcframework
+        with:
+          name: Artifacts
+          path: |
+            $ADMIRAL_SWIFTUI
+            $ADMIRAL_UIKIT
+            $ADMIRAL_THEMES
+            $ADMIRAL_UIRESOURCES
+
+
+
+
