--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,6 +8,18 @@ on:
   workflow_dispatch:
 
 jobs:
+  Push-To-BitBucket:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url:
+            ${{ secrets.BITBACKET_URL }}
+          ssh_private_key:
+            ${{ secrets.GITLAB_SSH_PRIVATE_KEY }}
   build:
     name: Build and Test default scheme using any available iPhone simulator
     runs-on: [self-hosted, main]
