--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,18 +8,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  Push-To-BitBucket:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: pixta-dev/repository-mirroring-action@v1
-        with:
-          target_repo_url:
-            ${{ secrets.BITBACKET_URL }}
-          ssh_private_key:
-            ${{ secrets.GITLAB_SSH_PRIVATE_KEY }}
   build:
     name: Build and Test default scheme using any available iPhone simulator
     runs-on: [self-hosted, main]
@@ -61,6 +49,19 @@ jobs:
             Products/xcframeworks/AdmiralUIKit.xcframework
             Products/xcframeworks/AdmiralTheme.xcframework
             Products/xcframeworks/AdmiralUIResources.xcframework
+
+  Push-To-Bitbucket:
+    runs-on: [ self-hosted, main ]
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Push commit to the mirror
+        run: |
+          git status
+          git fetch --all
+          git checkout --track origin/${{ github.head_ref }}
+          git push --all --force mirror
+          git status
 
 
 
