--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,6 +15,9 @@ jobs:
       API_GITHUB_TOKEN: ${{ secrets.API_GITHUB_TOKEN }}
       APPCENTER_API_TOKEN: ${{ secrets.APPCENTER_API_TOKEN }}
       FIGMA_ACCESS_TOKEN: ${{ secrets.FIGMA_ACCESS_TOKEN }}
+      TELEGRAM_API_TOKEN: ${{ secrets.TELEGRAM_API_TOKEN }}
+      TELEGRAM_DEV_CHAT_ID: ${{ secrets.TELEGRAM_DEV_CHAT_ID }}
+      ACTION_ID: ${{ github.run_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,12 +25,12 @@ jobs:
         run:  bundle install
       - name: Start SwiftUI & UIKit tests
         run:  bundle exec fastlane run_all_tests
+        if: ${{ failure() }}
+        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$ACTION_ID"
       - name: Deploy AppCenter Dev
         if: ${{ github.event_name == 'pull_request' }}
         env:     
           CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
-          TELEGRAM_API_TOKEN: ${{ secrets.TELEGRAM_API_TOKEN }}
-          TELEGRAM_DEV_CHAT_ID: ${{ secrets.TELEGRAM_DEV_CHAT_ID }}
         run: |
           bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
           bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }} pull_request_number:${{ github.event.number }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID"
