--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -26,8 +26,8 @@ jobs:
       # - name: Start SwiftUI & UIKit tests
       #   run:  bundle exec fastlane run_all_tests
       # - name: Check If Failed
-      #   if: ${{ failure() }}
-        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
+      #    if: ${{ failure() }}
+      #   run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
       - name: Deploy AppCenter Dev
         if: ${{ github.event_name == 'pull_request' }}
         env:     
