--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
           bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }} pull_request_number:${{ github.event.number }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID"
+          bundle exec fastlane create_release
       - name: Check If Failed
         if: ${{ failure() }}
         run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
