--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -25,6 +25,11 @@ opt_in_rules:
   - overridden_super_call
   - unused_optional_binding
   - colon
+  - empty_count
+  - unneeded_parentheses_in_closure_argument
+  - vertical_parameter_alignment_on_call
+  - implicit_return
+  - multiline_parameters
 
 excluded:
   - Carthage
