Add comand to update fastlane

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -24,9 +24,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Environment
-        run:  bundle install
+        run: |
+          bundle install
+          bundle update fastlane
       - name: Start SwiftUI & UIKit tests
-        run:  bundle exec fastlane run_all_tests
+        run: bundle exec fastlane run_all_tests
       - name: Check If Failed
         if: ${{ failure() }}
         run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
