--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -27,8 +27,8 @@ jobs:
         run: |
           bundle install
           bundle update fastlane
-      - name: Start SwiftUI & UIKit tests
-        run: bundle exec fastlane run_all_tests
+      # - name: Start SwiftUI & UIKit tests
+      #   run: bundle exec fastlane run_all_tests
       - name: Check If Failed
         if: ${{ failure() }}
         run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
