Add check if failed

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Validate Depenecy Managers
         if: ${{ github.event_name == 'push'}}
         run: bundle exec fastlane validate_depenecy_managers
+        - name: Check If Failed
+        if: ${{ failure() }}
+        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
       - name: Build XCFrameworks
         if: ${{ github.event_name == 'push' }}
         run: bundle exec fastlane build_git_packages
