--- a/fastlane/.env
+++ b/fastlane/.env
@@ -10,6 +10,7 @@ EXAMPLE_PROJECT_PATH='ExampleiOS/ExampleiOS.xcodeproj'
 LIBRARY_PROJECT_PATH='AdmiralUI.xcodeproj'
 PROJECT_WORKSPACE_PATH='AdmiralUI.xcworkspace'
 VERSION_FILE='../version.json'
+CHECKSUM_FILE='../checksum.json'
 
 FIGMA_FONTS_FILE_KEY=''
 FIGMA_COLORS_FILE_KEY=''
